--- a/index.html
+++ b/index.html
@@ -1,13 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>i am sss</h1>
-</body>
+    <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/1540444276.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- this is my header -->
+    <header>
+      <h3>Influencer products</h3>
+    </header>
+    <!-- This is my main part -->
+    <main>
+      <div class="part-1">
+        <div class="detail">
+          <h1>
+            Start Your Journey as<br />
+            Influencer
+          </h1>
+          <p>Enter your dream.Enter your dream.</p>
+          <button type="submit">
+            book now <i class="fas fa-arrow-right"></i>
+          </button>
+        </div>
+        <div class="picture">
+          <img src="images/main-camera.png" alt="" />
+        </div>
+      </div>
+      <!-- colection section -->
+      <section class="collection">
+        <h2>Popular collections</h2>
+        <div class="items">
+          <div class="item">
+            <img src="images/lights.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Light setup</h3>
+              <h4 item-price>$1000</h4>
+              <p>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i>4
+              </p>
+              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/single-light.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Light setup</h3>
+              <h4 item-price>$1000</h4>
+              <p>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i>4
+              </p>
+              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/drone.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Light setup</h3>
+              <h4 item-price>$1000</h4>
+              <p>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i>4
+              </p>
+              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/mic.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Light setup</h3>
+              <h4 item-price>$1000</h4>
+              <p>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i>4
+              </p>
+              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/setup.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Light setup</h3>
+              <h4 item-price>$1000</h4>
+              <p>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i>4
+              </p>
+              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="images/airpod.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Light setup</h3>
+              <h4 item-price>$1000</h4>
+              <p>
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i>4
+              </p>
+              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
