--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
               <h3 class="item-name">Light setup</h3>
               <h4 item-price>$1000</h4>
               <p>
-                <i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i>4
+                <i class="fas fa-star fill"></i>
+                <i class="fas fa-star fill"></i>
+                <i class="fas fa-star fill"></i>
+                <i class="fas fa-star fill"></i>
+                <i class="fas fa-star"></i>4
               </p>
               <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
@@ -53,11 +55,11 @@
           <div class="item">
             <img src="images/single-light.png" alt="" />
             <div class="item-detail">
-              <h3 class="item-name">Light setup</h3>
-              <h4 item-price>$1000</h4>
+              <h3 class="item-name">Green Screen</h3>
+              <h4 item-price>$25</h4>
               <p>
-                <i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
               </p>
               <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
@@ -66,11 +68,11 @@
           <div class="item">
             <img src="images/drone.png" alt="" />
             <div class="item-detail">
-              <h3 class="item-name">Light setup</h3>
-              <h4 item-price>$1000</h4>
+              <h3 class="item-name">Drone</h3>
+              <h4 item-price>$900</h4>
               <p>
-                <i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
               </p>
               <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
@@ -79,11 +81,11 @@
           <div class="item">
             <img src="images/mic.png" alt="" />
             <div class="item-detail">
-              <h3 class="item-name">Light setup</h3>
-              <h4 item-price>$1000</h4>
+              <h3 class="item-name">Microphone</h3>
+              <h4 item-price>$100</h4>
               <p>
-                <i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
               </p>
               <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
@@ -92,11 +94,11 @@
           <div class="item">
             <img src="images/setup.png" alt="" />
             <div class="item-detail">
-              <h3 class="item-name">Light setup</h3>
-              <h4 item-price>$1000</h4>
+              <h3 class="item-name">Photoshoot Set</h3>
+              <h4 item-price>$800</h4>
               <p>
-                <i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
               </p>
               <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
@@ -105,18 +107,49 @@
           <div class="item">
             <img src="images/airpod.png" alt="" />
             <div class="item-detail">
-              <h3 class="item-name">Light setup</h3>
-              <h4 item-price>$1000</h4>
+              <h3 class="item-name">Airbuds</h3>
+              <h4 item-price>$100</h4>
               <p>
-                <i class="fas fa-star"></i><i class="fas fa-star"></i
-                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
               </p>
               <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
         </div>
+        <h5>see more<i class="fas fa-arrow-right"></i></h5>
+      </section>
+      <section class="course">
+        <div class="course-pic">
+          <img src="images/influencer.jpg" alt="" />
+        </div>
+        <div class="detail">
+          <h1>Influencer Markating Course</h1>
+          <p>
+            For all Choses,Agency Owners and Course Creators,Do Not Miss
+            Out,Refister For Free Today
+          </p>
+          <button type="submit">Register Now</button>
+        </div>
       </section>
     </main>
+    <footer>
+      <div class="footer-content">
+        <h2>Influencer Products</h2>
+        <h6>
+          Copy right<i class="fas fa-copyright"></i> 2022 influencer productsbr
+        </h6>
+        <h6>All rights reserved</h6>
+      </div>
+
+      <div class="footer-icon">
+        <p>
+          <i class="fab fa-twitter-square"></i>
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-youtube"></i>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
