--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     ></script>
   </head>
   <body>
-    <!-- this is my header -->
+    <!-- this is header -->
     <header>
       <h3>Influencer products</h3>
     </header>
-    <!-- This is my main part -->
+    <!-- This is main part -->
     <main>
-      <div class="part-1">
+      <!-- intro section -->
+      <section class="intro">
         <div class="detail">
           <h1>
             Start Your Journey as<br />
             Influencer
           </h1>
-          <p>Enter your dream.Enter your dream.</p>
+          <p>
+            Enter your dream. Stay with us. Fetured products are in one place
+          </p>
           <button type="submit">
             book now <i class="fas fa-arrow-right"></i>
           </button>
@@ -32,7 +35,7 @@
         <div class="picture">
           <img src="images/main-camera.png" alt="" />
         </div>
-      </div>
+      </section>
       <!-- colection section -->
       <section class="collection">
         <h2>Popular collections</h2>
@@ -48,8 +51,11 @@
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star"></i>4
+
+                <br />
+                Free shipping <br />Compare prices from 5+ stores <br />Buy
+                protection plan
               </p>
-              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
           <div class="item">
@@ -61,8 +67,10 @@
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
+                <br />
+                Free shipping
+                <br />Compare prices from 5+ stores <br />Buy protection plan
               </p>
-              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
           <div class="item">
@@ -74,8 +82,10 @@
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
+                <br />
+                Free shipping
+                <br />Compare prices from 5+ stores <br />Buy protection plan
               </p>
-              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
           <div class="item">
@@ -87,8 +97,10 @@
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
+
+                <br />Free shipping <br />Compare prices from 5+ stores
+                <br />Buy protection plan
               </p>
-              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
           <div class="item">
@@ -100,8 +112,10 @@
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star"></i>4
+
+                <br />Free shipping <br />Compare prices from 5+ stores
+                <br />Buy protection plan
               </p>
-              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
           <div class="item">
@@ -112,14 +126,17 @@
               <p>
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
-                ><i class="fas fa-star"></i>4
+                ><i class="fas fa-star nosfill"></i>4
+
+                <br />Free shipping <br />Compare prices from 5+ stores
+                <br />Buy protection plan
               </p>
-              <p>thiyyyyyyyyyyyyyyyyyyyyyy</p>
             </div>
           </div>
         </div>
         <h5>see more<i class="fas fa-arrow-right"></i></h5>
       </section>
+      <!-- course section -->
       <section class="course">
         <div class="course-pic">
           <img src="images/influencer.jpg" alt="" />
@@ -127,13 +144,16 @@
         <div class="detail">
           <h1>Influencer Markating Course</h1>
           <p>
-            For all Choses,Agency Owners and Course Creators,Do Not Miss
-            Out,Refister For Free Today
+            For all Coaches, Agency Owners and Course Creators, Do Not Miss Out,
+            Register For Free Today
           </p>
-          <button type="submit">Register Now</button>
+          <button type="submit">
+            Register Now <i class="fas fa-arrow-right"></i>
+          </button>
         </div>
       </section>
     </main>
+    <!-- footer -->
     <footer>
       <div class="footer-content">
         <h2>Influencer Products</h2>
@@ -148,6 +168,7 @@
           <i class="fab fa-twitter-square"></i>
           <i class="fab fa-facebook"></i>
           <i class="fab fa-youtube"></i>
+          <i class="fab fa-instagram-square"></i>
         </p>
       </div>
     </footer>
