add media query

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <img src="images/lights.png" alt="" />
             <div class="item-detail">
               <h3 class="item-name">Light setup</h3>
-              <h4 item-price>$1000</h4>
+              <h4 item-price>$1000.00</h4>
               <p>
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star fill"></i>
-                <i class="fas fa-star"></i>4
+                <i class="fas fa-star nofill"></i>4.0
 
                 <br />
                 Free shipping <br />Compare prices from 5+ stores <br />Buy
@@ -62,11 +62,11 @@
             <img src="images/single-light.png" alt="" />
             <div class="item-detail">
               <h3 class="item-name">Green Screen</h3>
-              <h4 item-price>$25</h4>
+              <h4 item-price>$25.00</h4>
               <p>
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
-                ><i class="fas fa-star"></i>4
+                ><i class="fas fa-star nofill"></i>4.0
                 <br />
                 Free shipping
                 <br />Compare prices from 5+ stores <br />Buy protection plan
@@ -77,11 +77,11 @@
             <img src="images/drone.png" alt="" />
             <div class="item-detail">
               <h3 class="item-name">Drone</h3>
-              <h4 item-price>$900</h4>
+              <h4 item-price>$900.00</h4>
               <p>
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
-                ><i class="fas fa-star"></i>4
+                ><i class="fas fa-star nofill"></i>4.0
                 <br />
                 Free shipping
                 <br />Compare prices from 5+ stores <br />Buy protection plan
@@ -92,11 +92,11 @@
             <img src="images/mic.png" alt="" />
             <div class="item-detail">
               <h3 class="item-name">Microphone</h3>
-              <h4 item-price>$100</h4>
+              <h4 item-price>$100.00</h4>
               <p>
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
-                ><i class="fas fa-star"></i>4
+                ><i class="fas fa-star nofill"></i>4.0
 
                 <br />Free shipping <br />Compare prices from 5+ stores
                 <br />Buy protection plan
@@ -107,11 +107,11 @@
             <img src="images/setup.png" alt="" />
             <div class="item-detail">
               <h3 class="item-name">Photoshoot Set</h3>
-              <h4 item-price>$800</h4>
+              <h4 item-price>$800.00</h4>
               <p>
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
-                ><i class="fas fa-star"></i>4
+                ><i class="fas fa-star nofill"></i>4.0
 
                 <br />Free shipping <br />Compare prices from 5+ stores
                 <br />Buy protection plan
@@ -122,11 +122,11 @@
             <img src="images/airpod.png" alt="" />
             <div class="item-detail">
               <h3 class="item-name">Airbuds</h3>
-              <h4 item-price>$100</h4>
+              <h4 item-price>$100.00</h4>
               <p>
                 <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
                 ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
-                ><i class="fas fa-star nosfill"></i>4
+                ><i class="fas fa-star nofill"></i>4.0
 
                 <br />Free shipping <br />Compare prices from 5+ stores
                 <br />Buy protection plan
@@ -134,7 +134,9 @@
             </div>
           </div>
         </div>
-        <h5>see more<i class="fas fa-arrow-right"></i></h5>
+        <div>
+          <h5>see more<i class="fas fa-arrow-right"></i></h5>
+        </div>
       </section>
       <!-- course section -->
       <section class="course">
