--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star fill"></i>
                 <i class="fas fa-star fill"></i>
-                <i class="fas fa-star nofill"></i>4.0
+                <i class="fas fa-star nofill"></i> 4.0
 
                 <br />
                 Free shipping <br />Compare prices from 5+ stores <br />Buy
@@ -141,7 +141,7 @@
       <!-- course section -->
       <section class="course">
         <div class="course-pic">
-          <img src="images/influencer.jpg" alt="" />
+          <img src="images/influencer.png" alt="" />
         </div>
         <div class="detail">
           <h1>Influencer Markating Course</h1>
@@ -159,12 +159,11 @@
     <footer>
       <div class="footer-content">
         <h2>Influencer Products</h2>
-        <h6>
-          Copy right<i class="fas fa-copyright"></i> 2022 influencer productsbr
-        </h6>
-        <h6>All rights reserved</h6>
+        <p>
+          Copy right <i class="fas fa-copyright"></i> 2022 influencer products
+        </p>
+        <p>All rights reserved</p>
       </div>
-
       <div class="footer-icon">
         <p>
           <i class="fab fa-twitter-square"></i>
