--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Influencer.com</title>
+    <title>Influencer Gear</title>
     <link rel="stylesheet" href="styles/style.css" />
     <script
       src="https://kit.fontawesome.com/1540444276.js"
@@ -26,7 +26,8 @@
             Influencer
           </h1>
           <p>
-            Enter your dream. Stay with us. Fetured products are in one place
+            Start your dream journey as Influence. Star with us! Featured
+            products are available in one place.
           </p>
           <button type="submit">
             book now <i class="fas fa-arrow-right"></i>
