header nav added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
   </head>
   <body>
     <!-- this is header -->
-    <header>
+    <header class="header-sec">
       <h3>Influencer products</h3>
+      <nav class="header-nav">
+        <ul>
+          <li>Home</li>
+          <li>Products</li>
+          <li>Sign up</li>
+          <li>Login</li>
+        </ul>
+        <i class="fas fa-search"></i>
+        <i class="fas fa-shopping-cart"></i>
+      </nav>
     </header>
     <!-- This is main part -->
     <main>
@@ -30,7 +40,7 @@
             products are available in one place.
           </p>
           <button type="submit">
-            book now <i class="fas fa-arrow-right"></i>
+            Preebook now <i class="fas fa-arrow-right"></i>
           </button>
         </div>
         <div class="picture">
