--- a/index.html
+++ b/index.html
@@ -49,8 +49,55 @@
       </section>
       <!-- colection section -->
       <section class="collection">
-        <h2>Popular collections</h2>
+        <h2>Popular Collections</h2>
         <div class="items">
+          <div class="item">
+            <img src="images/tripod.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Fixed Tripod</h3>
+              <h4 item-price>$50.48</h4>
+              <p>
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star nofill"></i>4.0
+
+                <br />Free shipping <br />Compare prices from 5+ stores
+                <br />Buy protection plan
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="images/camera.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Vlogging Camera</h3>
+              <h4 item-price>$1800.00</h4>
+              <p>
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star nofill"></i>4.0
+
+                <br />Free shipping <br />Compare prices from 5+ stores
+                <br />Buy protection plan
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="images/action.png" alt="" />
+            <div class="item-detail">
+              <h3 class="item-name">Action Camera</h3>
+              <h4 item-price>$380.00</h4>
+              <p>
+                <i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star fill"></i><i class="fas fa-star fill"></i
+                ><i class="fas fa-star nofill"></i>4.0
+
+                <br />Free shipping <br />Compare prices from 5+ stores
+                <br />Buy protection plan
+              </p>
+            </div>
+          </div>
           <div class="item">
             <img src="images/lights.png" alt="" />
             <div class="item-detail">
@@ -146,7 +193,7 @@
           </div>
         </div>
         <div>
-          <h5>see more<i class="fas fa-arrow-right"></i></h5>
+          <h5>See More <i class="fas fa-arrow-right"></i></h5>
         </div>
       </section>
       <!-- course section -->
@@ -155,10 +202,10 @@
           <img src="images/influencer.png" alt="" />
         </div>
         <div class="detail">
-          <h1>Influencer Markating Course</h1>
+          <h1>Influencer Learning Course</h1>
           <p>
-            For all Coaches, Agency Owners and Course Creators, Do Not Miss Out,
-            Register For Free Today
+            For all Coaches, Agency Owners and Course Creators, don't miss out!
+            Register for free today.
           </p>
           <button type="submit">
             Register Now <i class="fas fa-arrow-right"></i>
